--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
+    <link rel="stylesheet" href="css/main.css">
+    <!-- <link rel="stylesheet" href="renderers/jquery.js"> -->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
+
 <body>
-    <h1>Hello World!</h1>
-    <p>
-        We are using Node.js <span id="node-version"></span>,
-        Chromium <span id="chrome-version"></span>,
-        and Electron <span id="electron-version"></span>.
-    </p>
+    <nav>
+        <ul>
+            <a id="exit">Exit</a>
+            <a id="new">About</a>
+            <a id="new">How To?</a>
+            <a id="new">Home</a>
+        </ul>
+    </nav>
+    <header>
+    </header>
+    <footer>
+        New
+    </footer>
     <script src="renderer.js"></script>
 </body>
+
 </html>
