--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <!-- <link rel="stylesheet" href="renderers/jquery.js"> -->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
@@ -13,9 +13,9 @@
     <nav>
         <ul>
             <a id="exit">Exit</a>
-            <a id="new">About</a>
-            <a id="new">How To?</a>
-            <a id="new">Home</a>
+            <a href="about.html" id="new">About</a>
+            <a href="how.html" id="new">How To?</a>
+            <a href="home.html" id="new">Home</a>
         </ul>
     </nav>
     <header>
