--- a/pages/how.html
+++ b/pages/how.html
@@ -23,7 +23,7 @@
     <footer>
         New
     </footer>
-    <script src="renderer.js"></script>
+    <script src="../renderers/renderer.js"></script>
 </body>
 
 </html>
