Add main to index.html

--- a/pages/index.html
+++ b/pages/index.html
@@ -18,8 +18,14 @@
             <a href="home.html" id="new">Home</a>
         </ul>
     </nav>
-    <header>
-    </header>
+    <main>
+        <div id="right_side">
+            <ul>
+                <li>Dowal bar</li>
+            </ul>
+        </div>
+        <div id="left_side"></div>
+    </main>
     <footer>
         New
     </footer>
