--- a/pages/about.html
+++ b/pages/about.html
@@ -13,17 +13,29 @@
     <nav>
         <ul>
             <a id="exit">Exit</a>
-            <a href="about.html" id="new">About</a>
-            <a href="how.html" id="new">How To?</a>
-            <a href="home.html" id="new">Home</a>
+            <a href="about.html" id="about_link">About</a>
+            <a href="how.html" id="how_link">How To?</a>
+            <a href="index.html" id="home_link">Home</a>
         </ul>
     </nav>
-    <header>
-    </header>
+    <main style="background-color: rgba(0,0,0,0.3); display: flex; justify-content: center;">
+        <div id="about">
+            <div id="about_app">
+                <h1>About Pavement Application</h1>
+            </div>
+            <div id="about_developer">
+                <h1>About Developer</h1>
+                <h2>AmirHossein Kiani</h2>
+                <h3>BS.c Civil Engineering(major) and Economics(minor)</h3>
+                <h4>Sharif University of Technology</h4>
+                <h5>AmirHKiani1998@yahoo/gmail.com</h5>
+                <img src="" alt="">
+            </div>
+        </div>
+
+    </main>
     <footer>
-        New
     </footer>
-    <script src="../renderers/renderer.js"></script>
 </body>
 
 </html>
