--- a/pages/how.html
+++ b/pages/how.html
@@ -15,7 +15,7 @@
             <a id="exit">Exit</a>
             <a href="about.html" id="new">About</a>
             <a href="how.html" id="new">How To?</a>
-            <a href="home.html" id="new">Home</a>
+            <a href="index.html" id="new">Home</a>
         </ul>
     </nav>
     <header>
