--- a/pages/about.html
+++ b/pages/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>About Me!</title>
     <link rel="stylesheet" href="../css/main.css">
     <!-- <link rel="stylesheet" href="renderers/jquery.js"> -->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
