Modify and edit pavements

--- a/pages/about.html
+++ b/pages/about.html
@@ -25,11 +25,11 @@
             </div>
             <div id="about_developer">
                 <h1>About Developer</h1>
+                <img src="../images/my_pic.jpg" alt="" width="200px" id="my_pic">
                 <h2>AmirHossein Kiani</h2>
                 <h3>BS.c Civil Engineering(major) and Economics(minor)</h3>
                 <h4>Sharif University of Technology</h4>
                 <h5>AmirHKiani1998@yahoo/gmail.com</h5>
-                <img src="" alt="">
             </div>
         </div>
 
