--- a/pages/properties_page.html
+++ b/pages/properties_page.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+    <header>
+        <h1>Pavement Proeperties</h1>
+        <br>
+    </header>
     <div id="container">
         <ul>
             <li>
