--- a/pages/index.html
+++ b/pages/index.html
@@ -36,6 +36,20 @@
                         <li class="change_mouse">Maximum Interior Curling</li>
                         <li class="change_mouse">Maximum Edge Curling</li>
                         <li class="change_mouse">Westergard corner stress</li>
+                        <li class="change_mouse">Ioannides corner stress</li>
+                        <li class="change_mouse">Westergard interior stress</li>
+                        <li class="change_mouse">Westergard edge stress - circle</li>
+                        <li class="change_mouse">Westergard edge stress - semicircle</li>
+                    </ul>
+                </li>
+                <li class="right_side_list">
+                    <p data-id="2" class="dropdown change_mouse">Deflections</p>
+                    <ul class="drop_down_list" data-id="2">
+                        <li class="change_mouse">Westergard corner deflection</li>
+                        <li class="change_mouse">Ioannides corner deflection</li>
+                        <li class="change_mouse">Westergard interior deflection</li>
+                        <li class="change_mouse">Westergard edge deflection - circle</li>
+                        <li class="change_mouse">Westergard edge deflection - semicircle</li>
                     </ul>
                 </li>
 
